Fix reply-to avatar vertical align in center

--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -432,7 +432,7 @@
         a {
           color: #666;
         }
-        .media-object { display: inline-block; margin-right: 5px; }
+        .media-object { display: inline-block; margin-right: 5px; vertical-align: top; }
         margin: 0;
 
         .user-name { font-weight: bold; }
